UI for home + Add Courses fix

--- a/ThereYet/Main.storyboard
+++ b/ThereYet/Main.storyboard
@@ -495,15 +495,11 @@
                                         <rect key="frame" x="0.0" y="28" width="600" height="60"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="uQE-wn-qH4" id="WDU-Rf-OyA">
-                                            <rect key="frame" x="0.0" y="0.0" width="600" height="59.5"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="600" height="60"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Calculus" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="oWK-2X-hNk">
-                                                    <rect key="frame" x="13" y="8" width="82" height="21"/>
-                                                    <constraints>
-                                                        <constraint firstAttribute="width" constant="82" id="FCx-MO-1ZQ"/>
-                                                        <constraint firstAttribute="height" constant="21" id="b1W-Am-v57"/>
-                                                    </constraints>
+                                                    <rect key="frame" x="13" y="8" width="579" height="21"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                     <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                                     <nil key="highlightedColor"/>
@@ -511,11 +507,15 @@
                                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="AeV-wa-aBs">
                                                     <rect key="frame" x="0.0" y="0.0" width="5" height="60"/>
                                                     <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="width" constant="5" id="RcB-Q6-uz1"/>
+                                                        <constraint firstAttribute="height" constant="60" id="edq-Na-HAp"/>
+                                                    </constraints>
                                                 </view>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="10:00am - 10:50am" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="VlA-AX-fFK">
-                                                    <rect key="frame" x="13" y="32" width="150" height="20"/>
+                                                    <rect key="frame" x="13" y="32" width="579" height="20"/>
                                                     <constraints>
-                                                        <constraint firstAttribute="width" constant="150" id="yWC-oW-MgN"/>
+                                                        <constraint firstAttribute="height" constant="20" id="sNl-Ge-tjj"/>
                                                     </constraints>
                                                     <fontDescription key="fontDescription" type="system" weight="light" pointSize="14"/>
                                                     <color key="textColor" red="0.20000000000000001" green="0.18823529410000001" blue="0.27450980390000002" alpha="1" colorSpace="calibratedRGB"/>
@@ -523,15 +523,15 @@
                                                 </label>
                                             </subviews>
                                             <constraints>
-                                                <constraint firstItem="oWK-2X-hNk" firstAttribute="leading" secondItem="WDU-Rf-OyA" secondAttribute="leading" constant="13" id="4sI-9a-6rr"/>
-                                                <constraint firstItem="AeV-wa-aBs" firstAttribute="centerY" secondItem="WDU-Rf-OyA" secondAttribute="centerY" id="Ea9-MT-Wds"/>
-                                                <constraint firstAttribute="bottomMargin" secondItem="VlA-AX-fFK" secondAttribute="bottom" constant="-0.5" id="SAz-Rf-keu"/>
-                                                <constraint firstItem="VlA-AX-fFK" firstAttribute="leading" secondItem="oWK-2X-hNk" secondAttribute="leading" id="ZQ3-pI-sXk"/>
-                                                <constraint firstItem="oWK-2X-hNk" firstAttribute="top" secondItem="WDU-Rf-OyA" secondAttribute="topMargin" id="bKh-53-TPz"/>
-                                                <constraint firstItem="oWK-2X-hNk" firstAttribute="leading" secondItem="AeV-wa-aBs" secondAttribute="trailing" constant="8" symbolic="YES" id="cId-0J-8A4"/>
-                                                <constraint firstItem="AeV-wa-aBs" firstAttribute="leading" secondItem="WDU-Rf-OyA" secondAttribute="leading" id="enT-oh-Q4z"/>
-                                                <constraint firstItem="VlA-AX-fFK" firstAttribute="top" secondItem="oWK-2X-hNk" secondAttribute="bottom" constant="3" id="mqM-1y-GRq"/>
-                                                <constraint firstItem="AeV-wa-aBs" firstAttribute="top" secondItem="WDU-Rf-OyA" secondAttribute="top" id="uHd-zd-LWv"/>
+                                                <constraint firstItem="VlA-AX-fFK" firstAttribute="trailing" secondItem="WDU-Rf-OyA" secondAttribute="trailingMargin" id="Bva-ML-mxP"/>
+                                                <constraint firstItem="AeV-wa-aBs" firstAttribute="leading" secondItem="WDU-Rf-OyA" secondAttribute="leading" id="CBO-9i-6ls"/>
+                                                <constraint firstItem="oWK-2X-hNk" firstAttribute="leading" secondItem="AeV-wa-aBs" secondAttribute="trailing" constant="8" id="R5L-bp-kNz"/>
+                                                <constraint firstItem="oWK-2X-hNk" firstAttribute="top" secondItem="WDU-Rf-OyA" secondAttribute="topMargin" id="dhr-Ld-VRL"/>
+                                                <constraint firstItem="VlA-AX-fFK" firstAttribute="top" secondItem="oWK-2X-hNk" secondAttribute="bottom" constant="3" id="doz-fV-0Hm"/>
+                                                <constraint firstItem="AeV-wa-aBs" firstAttribute="top" secondItem="WDU-Rf-OyA" secondAttribute="top" id="oxN-f9-ma7"/>
+                                                <constraint firstItem="oWK-2X-hNk" firstAttribute="trailing" secondItem="WDU-Rf-OyA" secondAttribute="trailingMargin" id="rm4-Gs-Ar5"/>
+                                                <constraint firstItem="VlA-AX-fFK" firstAttribute="leading" secondItem="AeV-wa-aBs" secondAttribute="trailing" constant="8" id="sa1-nr-C8a"/>
+                                                <constraint firstAttribute="bottomMargin" secondItem="VlA-AX-fFK" secondAttribute="bottom" constant="-0.5" id="umW-Ol-5SY"/>
                                             </constraints>
                                         </tableViewCellContentView>
                                         <connections>
@@ -606,23 +606,13 @@
                                     </userDefinedRuntimeAttribute>
                                 </userDefinedRuntimeAttributes>
                             </view>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="45 minutes" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="vWc-QZ-kRT">
-                                <rect key="frame" x="257" y="275" width="86" height="21"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="45 minutes" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="vWc-QZ-kRT">
+                                <rect key="frame" x="20" y="275" width="560" height="21"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="21" id="7Nf-7n-wyb"/>
                                 </constraints>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Next class in" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="XbU-LJ-A37">
-                                <rect key="frame" x="212" y="246" width="176" height="28"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="28" id="BpJ-0z-XqN"/>
-                                    <constraint firstAttribute="width" constant="176" id="OF8-6f-Yqx"/>
-                                </constraints>
-                                <fontDescription key="fontDescription" type="system" pointSize="22"/>
-                                <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <fontDescription key="fontDescription" type="system" weight="light" pointSize="17"/>
+                                <color key="textColor" red="0.95234375000000004" green="0.95234375000000004" blue="0.95234375000000004" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Today's Classes" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="bkz-PG-WUg">
@@ -634,26 +624,39 @@
                                 <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Next class in" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="XbU-LJ-A37">
+                                <rect key="frame" x="20" y="248" width="560" height="28"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="22"/>
+                                <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <color key="backgroundColor" red="0.11764705882352941" green="0.68627450980392157" blue="0.95294117647058818" alpha="1" colorSpace="calibratedRGB"/>
                         <constraints>
                             <constraint firstItem="IXo-a0-8ny" firstAttribute="centerX" secondItem="wky-YO-cEc" secondAttribute="centerX" id="5cx-XG-9zd"/>
+                            <constraint firstItem="XbU-LJ-A37" firstAttribute="top" secondItem="IXo-a0-8ny" secondAttribute="bottom" constant="20" id="Bqt-CA-C8E"/>
                             <constraint firstItem="XbU-LJ-A37" firstAttribute="centerX" secondItem="wky-YO-cEc" secondAttribute="centerX" id="IOl-Hk-aP0"/>
+                            <constraint firstItem="vWc-QZ-kRT" firstAttribute="trailing" secondItem="wky-YO-cEc" secondAttribute="trailingMargin" id="MPL-03-xi1"/>
                             <constraint firstItem="vWc-QZ-kRT" firstAttribute="centerX" secondItem="wky-YO-cEc" secondAttribute="centerX" id="OXk-aW-wzY"/>
-                            <constraint firstItem="XbU-LJ-A37" firstAttribute="top" secondItem="IXo-a0-8ny" secondAttribute="bottom" constant="18" id="SIZ-a4-Vmq"/>
                             <constraint firstItem="bkz-PG-WUg" firstAttribute="leading" secondItem="wky-YO-cEc" secondAttribute="leadingMargin" constant="-12" id="ST8-xC-w3O"/>
                             <constraint firstItem="JRh-9F-ZBJ" firstAttribute="centerX" secondItem="vWc-QZ-kRT" secondAttribute="centerX" id="TV7-DB-GH5"/>
+                            <constraint firstItem="vWc-QZ-kRT" firstAttribute="top" secondItem="IXo-a0-8ny" secondAttribute="bottom" constant="47" id="b9j-7b-uCD"/>
                             <constraint firstItem="JRh-9F-ZBJ" firstAttribute="bottom" secondItem="883-1b-UkI" secondAttribute="top" id="euu-46-j0b"/>
+                            <constraint firstItem="vWc-QZ-kRT" firstAttribute="leading" secondItem="wky-YO-cEc" secondAttribute="leadingMargin" id="k4C-ya-l5e"/>
+                            <constraint firstItem="XbU-LJ-A37" firstAttribute="trailing" secondItem="wky-YO-cEc" secondAttribute="trailingMargin" id="oNC-AV-NMJ"/>
                             <constraint firstItem="IXo-a0-8ny" firstAttribute="top" secondItem="36g-pp-zJu" secondAttribute="bottom" constant="28" id="tTX-WQ-5vq"/>
                             <constraint firstItem="JRh-9F-ZBJ" firstAttribute="leading" secondItem="wky-YO-cEc" secondAttribute="leading" id="uh7-8j-vRy"/>
                             <constraint firstItem="JRh-9F-ZBJ" firstAttribute="top" secondItem="bkz-PG-WUg" secondAttribute="bottom" constant="8" id="w00-3h-H4Z"/>
-                            <constraint firstItem="vWc-QZ-kRT" firstAttribute="top" secondItem="XbU-LJ-A37" secondAttribute="bottom" constant="1" id="yHT-hq-flE"/>
+                            <constraint firstItem="XbU-LJ-A37" firstAttribute="leading" secondItem="wky-YO-cEc" secondAttribute="leadingMargin" id="wid-dG-Gab"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" title="Home" id="9w6-mR-aWt">
                         <barButtonItem key="leftBarButtonItem" image="menu.png" id="VGG-xd-tmx"/>
                     </navigationItem>
                     <connections>
+                        <outlet property="labelCountDown" destination="vWc-QZ-kRT" id="cyv-dQ-zl2"/>
+                        <outlet property="labelHeading" destination="XbU-LJ-A37" id="B7u-ae-Rep"/>
+                        <outlet property="labelTodaysClasses" destination="bkz-PG-WUg" id="mGQ-PR-MHx"/>
                         <outlet property="progressBar" destination="IXo-a0-8ny" id="Tye-qE-dH2"/>
                         <outlet property="progressImage" destination="pC8-My-ogT" id="5wf-C8-MFx"/>
                         <outlet property="tableView" destination="JRh-9F-ZBJ" id="pF4-gz-hvz"/>
@@ -1239,6 +1242,6 @@
         <image name="menu.png" width="20" height="15"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="zDW-ko-ZFV"/>
+        <segue reference="9M0-MW-Mcv"/>
     </inferredMetricsTieBreakers>
 </document>
